fix: bug 1466 input spacing

--- a/public/botchat.css
+++ b/public/botchat.css
@@ -514,7 +514,7 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea {
     visibility: hidden; }
   .wc-console .wc-textbox {
     bottom: 0;
-    left: 48px;
+    left: 10px;
     right: 49px; }
     .wc-console .wc-textbox input {
       background-color: transparent; }
